@@ -1,15 +1,18 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.425 2005/10/19 20:24:02 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.426 2005/10/20 00:21:54 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
   19 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
   change call to 'grub' to use GLIUtility.exitsuccess()
+  add definition of 'build_mode' in _configure_lilo()
   src/misc/updategtkfe, src/misc/updateglid:
   fix so subshell is called in root shell
+  src/GLIArchitectuctureTemplate.py:
+  comment out 2 lines that try to quickpkg again in install_packages()
 
   18 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/handlers/WebGLIHandler.py:
